RESOLVED FIXED137104
[iOS] Another iOS build fix; workaround for CoreLocation
https://bugs.webkit.org/show_bug.cgi?id=137104
Summary [iOS] Another iOS build fix; workaround for CoreLocation
Daniel Bates
Reported 2014-09-24 21:19:43 PDT
Following up after the patch for bug #137101, a better workaround is to add a default statement in -[WebGeolocationCoreLocationProvider requestGeolocationAuthorization] and -[WebGeolocationCoreLocationProvider locationManager:didChangeAuthorizationStatus:]. We'll remove these default statements once we have the fix for <rdar://problem/18448331>.
Attachments
Patch (4.33 KB, patch)
2014-09-24 21:26 PDT, Daniel Bates
benjamin: review+
Daniel Bates
Comment 1 2014-09-24 21:25:45 PDT
Daniel Bates
Comment 2 2014-09-24 21:26:52 PDT
Daniel Bates
Comment 3 2014-09-24 21:31:18 PDT
Note You need to log in before you can comment on or make changes to this bug.