[iOS] Another iOS build fix; workaround for CoreLocation https://bugs.webkit.org/show_bug.cgi?id=137104 <rdar://problem/18450785>

Rubber-stamped by Benjamin Poulain.

Workaround CoreLocation issue by adding a default statement in -[WebGeolocationCoreLocationProvider requestGeolocationAuthorization]
and -[WebGeolocationCoreLocationProvider locationManager:didChangeAuthorizationStatus:].
We'll remove these default statements once we have the fix for <rdar://problem/18448331>.

* Misc/WebGeolocationCoreLocationProvider.mm:
(-[WebGeolocationCoreLocationProvider requestGeolocationAuthorization]):
(-[WebGeolocationCoreLocationProvider locationManager:didChangeAuthorizationStatus:]):

Canonical link: https://commits.webkit.org/154911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173946 268f45cc-cd09-0410-ab3c-d52691b4dbfc